Improve tutorial